<resources>
    <string name="app_name">Interactive_LED</string>

    <!--  DeviceListActivity -->

    <string name="select_device">выберите устройства для подключения</string>


    <!--  BluetoothFragment -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">Device connected</string>
    <string name="title_not_connected">not connected</string>

    <!--    ToolBar state-->
    <!--    <string name="bluetooth_on">Bluetooth включен</string>-->
    <!--    <string name="bluetooth_connected">Соединен</string>-->
    <string name="bluetooth_disabled">Bluetooth выключен</string>

    <string name="gallery_image">Галерея</string>


    <!--    list_item_image.xml-->
    <string name="select_card">выбрать</string>

    <!--    +++++++++++++++++++++ -->
    <!--    SingleFragmentActivity-->
    <string name="sate_bluetooth_off">Включите Bluetooth</string>
    <string name="state_non_connected_device">Подключите устройство</string>
    <string name="state_connected_device">Устройство подключено</string>

    <!--    menu: activity_single_fragment-->
    <string name="bluetooth_on">Bluetooth включен</string>
    <string name="bluetooth_off">Bluetooth выключен</string>
    <string name="bluetooth_connected">Соединен</string>
    <string name="device_list">Найти устройства</string>
    <string name="save_img">Сохранить</string>
    <string name="gallery">Галерея</string>

    <!--    DeviceListFragment-->
    <string name="name_devices">Имя:</string>
    <string name="address_devices">MAC:</string>
    <string name="none_paired">Устройства не были сопряжены</string>
    <string name="title_paired_devices">Сопряженные устройства</string>
    <string name="none_found">Устройства не найдены</string>
    <string name="title_other_devices">Другие доступные устройства</string>
    <string name="scanning">Сканирование устройств....</string>
    <string name="button_scan">Сканировать устройства</string>

    <!--    DrawingFragment-->
    <string name="select_color">Выбрать цвет</string>
    <string name="eraser">Ластик</string>
    <string name="erase_drawing">Очистить</string>

    <!--    ColorPicker-->
    <string name="select">Выбрать</string>
    <string name="hue">Цветовой тон</string>
    <string name="saturation">Насыщенность</string>
    <string name="value">Яркость</string>
    <string name="color_picker">Палитра цветов</string>

    <!--    SaveImageDialog-->
    <string name="title_save_img">Сохранить изображение</string>
    <string name="hint_edit_text_save_image">Введите название</string>

    <!--    GalleryFragment-->
    <string name="title_bottom_toolbar_gallery">Помечено на удаление: %1$d</string>

</resources>
