<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bluetooth_on"
        android:title="@string/bluetooth_on"
        android:icon="@drawable/ic_bluetooth_on"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/bluetooth_off"
        android:title="@string/bluetooth_off"
        android:icon="@drawable/ic_bluetooth_off"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bluetooth_connected"
        android:title="@string/bluetooth_connected"
        android:icon="@drawable/ic_bluetooth_connected"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/device_list"
        android:title="@string/device_list"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item android:id="@+id/save_img_dialog"
        android:title="@string/save_img"
        android:orderInCategory="5"
        app:showAsAction="never"/>

    <item android:id="@+id/gallery"
        android:title="@string/gallery"
        android:orderInCategory="6"
        app:showAsAction="never"/>

</menu>