<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bluetooth_on"
        android:title="@string/bluetooth_on"
        android:icon="@drawable/baseline_bluetooth_black_18dp"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/bluetooth_disabled"
        android:title="@string/bluetooth_disabled"
        android:icon="@drawable/baseline_bluetooth_disabled_black_18dp"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/bluetooth_connected"
        android:title="@string/bluetooth_connected"
        android:icon="@drawable/baseline_bluetooth_connected_black_18dp"
        android:orderInCategory="4"
        app:showAsAction="always" />

    <item android:id="@+id/device_list_activity"
        android:title="@string/device_list"
        android:icon="@drawable/baseline_search_black_18dp"
        android:orderInCategory="5"
        app:showAsAction="never" />

    <item android:id="@+id/gallery_image"
        android:title="@string/gallery_image"
        android:orderInCategory="6"
        app:showAsAction="never"/>

    <item android:id="@+id/save_image_menu"
        android:title="aaa"
        android:orderInCategory="7"
        app:showAsAction="never"/>

</menu>