<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/select_color"
        android:title="@string/select_color"
        android:icon="@drawable/ic_select_color"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/eraser"
        android:title="@string/eraser"
        android:icon="@drawable/ic_eraser"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/erase_drawing"
        android:title="@string/erase_drawing"
        android:icon="@drawable/ic_erase_drawing"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>
</menu>